--- a/ss.html
+++ b/ss.html
@@ -41,22 +41,23 @@
         </div>
 
         <div class="juli">
-            <table class="luk">
-                <tr class="dig">
-                    <th class="s">
+            
+            <div class="luk">
+                <div class="dig">
+                    <div class="s">
                         <p>АДРЕС:</p>
                         <p class="eu"><br>Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit </p>
-                    </th>
-                    <th class="s">
+                    </div>
+                    <div class="s">
                         <p>ТЕЛЕФОН:</p>
                         <p class="eu"><br>8 (812) 123-45-67 <br> <br>8-911-123-45-67</p>
-                    </th>
-                    <th class="s">
+                    </div>
+                    <div class="s">
                         <p>РЕЖИМ РАБОТЫ:</p>
                         <p class="eu"><br>пн-пт : 10:00 - 20:00 <br> <br>сб-вск : 12:00 - 20:00</p>                            
-                    </th>
-                </tr>
-            </table>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
 
@@ -364,7 +365,7 @@
                     <div>
                         <img src="Group 2.png" alt="">
                     </div>
-                    <div>
+                    <div class="div-hui">
                         <div class="imgandtext">
                             <img src="Group 53.png" alt="">
                             <p class="text-info">выполняем работу четко по тз</p>
